Updated software section new button binding

--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -78,7 +78,7 @@
 							<a class="nav-link pl-0" href="/dashboard/events"><i class="fa fa-calendar-alt"></i> <span class="d-none d-md-inline">Events</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link pl-0" href="/dashboard/gitlab"><i class="fa fa-microchip"></i> <span class="d-none d-md-inline">GitLab</span></a>
+							<a class="nav-link pl-0" href="https://gitlab.fenu-experiment.pl"><i class="fa fa-microchip"></i> <span class="d-none d-md-inline">GitLab</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link pl-0" href="/dashboard/forum"><i class="fa fa-comments"></i> <span class="d-none d-md-inline">Forum</span></a>
