--- a/App/templates/dashboard/events.html
+++ b/App/templates/dashboard/events.html
@@ -2,6 +2,8 @@
 {% block dashboard %}
 
 
+	<iframe width="100%" height="20%" src="https://hub.fenu-experiment.pl/apps/calendar/embed/LHes4wbH7BqYFkjG"></iframe>
+
 <div class="card text-center">
 <div class="card-body">
 <div class="btn-group" role="group" aria-label="First group">
