--- a/App/static/css/dashboard.css
+++ b/App/static/css/dashboard.css
@@ -22,12 +22,13 @@ body {
   /* rtl:remove */
   left: 0;
   z-index: 100; /* Behind the navbar */
+  padding: 48px 0 0; /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
 @media (max-width: 767.98px) {
   .sidebar {
-    top: 5rem;
+    top: 0rem;
   }
 }
 
@@ -76,6 +77,10 @@ body {
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
 
+.navbar .navbar-toggler {
+  top: .25rem;
+  right: 1rem;
+}
 
 .navbar .form-control {
   padding: .75rem 1rem;
