--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -1,348 +1,98 @@
-
-							<!doctype html>
-<html lang="pl"/>
-<head>
-	<meta charset="utf-8">
-	<meta name="author" content="Albert Szadziński">
-	<meta name="description" content="BINA experiment page">
-	<meta name="keywords" content="tags>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-	<script>
-	MathJax = {
-	  tex: {
-	    inlineMath: [['$', '$'], ['\\(', '\\)']]
-	  }
-	};
-	</script>
-	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+{% extends "home.html" %}
+{% block body %}
 
 
-	<title>FeNu-Experiment</title>
-	<link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
-<link href="/css/dashboard.css" rel="stylesheet">
-</head>
-<body>
+	<div class="container-fluid">
+		<div class="row">
+			<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+				<div class="position-sticky pt-0">
+					<ul class="nav flex-column">
+						<li class="nav-item">
+							<h5>Dashboard</h5>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+								<span data-feather="file"></span>
+								Orders
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+								<span data-feather="shopping-cart"></span>
+								Products
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+							<span data-feather="users"></span>
+							Customers
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+							<span data-feather="bar-chart-2"></span>
+							Reports
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+							<span data-feather="layers"></span>
+							Integrations
+							</a>
+						</li>
+					</ul>
 
-	<header class="p-3 mb-3 border-bottom">
-     <div class="container">
-       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-           <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="/img/favicon.png"/></svg>
-         </a>
+					<h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+						<span>Saved reports</span>
+						<a class="link-secondary" href="#" aria-label="Add a new report">
+						<span data-feather="plus-circle"></span>
+						</a>
+					</h6>
+					<ul class="nav flex-column mb-2">
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+							<span data-feather="file-text"></span>
+							Current month
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+							<span data-feather="file-text"></span>
+							Last quarter
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+							<span data-feather="file-text"></span>
+							Social engagement
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+							<span data-feather="file-text"></span>
+							Year-end sale
+							</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+			<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+				<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+					<h5 class="h5">Overview</h5>
+					<div class="btn-toolbar mb-2 mb-md-0">
+						<div class="btn-group me-2">
+							<button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+							<button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+						</div>
+						<button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+						<span data-feather="calendar"></span>
+							This week
+						</button>
+					</div>
+				</div>
+{% block dashboard %}{% endblock %}
+			</main>
+		</div>
+	</div>
 
-         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-           <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
-           <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
-           <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
-           <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
-         </ul>
-
-         <div class="dropdown text-end">
-           <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-             <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-           </a>
-           <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-             <li><a class="dropdown-item" href="#">New project...</a></li>
-             <li><a class="dropdown-item" href="#">Settings</a></li>
-             <li><a class="dropdown-item" href="#">Profile</a></li>
-             <li><hr class="dropdown-divider"></li>
-             <li><a class="dropdown-item" href="#">Sign out</a></li>
-           </ul>
-         </div>
-			 <button type="button" class="btn btn-outline-dark me-2">Login</button>
-       </div>
-     </div>
-   </header>
-
-<div class="container ">
-
-
-<main>
-    <div class="p-5 mb-4 bg-light rounded-3">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-        <button class="btn btn-primary btn-lg" type="button">Example button</button>
-      </div>
-    </div>
-
-    <div class="row align-items-md-stretch">
-      <div class="col-md-6">
-        <div class="h-100 p-5 text-white bg-dark rounded-3">
-          <h2>Change the background</h2>
-          <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
-          <button class="btn btn-outline-light" type="button">Example button</button>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="h-100 p-5 bg-light border rounded-3">
-          <h2>Add borders</h2>
-          <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-          <button class="btn btn-outline-secondary" type="button">Example button</button>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-</main>
-</div>
-
- <div class="container">
-   <main>
-     <div class="row g-5">
-       <div class="col-md-5 col-lg-4 order-md-last">
-         <h4 class="d-flex justify-content-between align-items-center mb-3">
-           <span class="text-primary">Your cart</span>
-           <span class="badge bg-primary rounded-pill">3</span>
-         </h4>
-         <ul class="list-group mb-3">
-           <li class="list-group-item d-flex justify-content-between lh-sm">
-             <div>
-               <h6 class="my-0">Product name</h6>
-               <small class="text-muted">Brief description</small>
-             </div>
-             <span class="text-muted">$12</span>
-           </li>
-           <li class="list-group-item d-flex justify-content-between lh-sm">
-             <div>
-               <h6 class="my-0">Second product</h6>
-               <small class="text-muted">Brief description</small>
-             </div>
-             <span class="text-muted">$8</span>
-           </li>
-           <li class="list-group-item d-flex justify-content-between lh-sm">
-             <div>
-               <h6 class="my-0">Third item</h6>
-               <small class="text-muted">Brief description</small>
-             </div>
-             <span class="text-muted">$5</span>
-           </li>
-           <li class="list-group-item d-flex justify-content-between bg-light">
-             <div class="text-success">
-               <h6 class="my-0">Promo code</h6>
-               <small>EXAMPLECODE</small>
-             </div>
-             <span class="text-success">−$5</span>
-           </li>
-           <li class="list-group-item d-flex justify-content-between">
-             <span>Total (USD)</span>
-             <strong>$20</strong>
-           </li>
-         </ul>
-
-         <form class="card p-2">
-           <div class="input-group">
-             <input type="text" class="form-control" placeholder="Promo code">
-             <button type="submit" class="btn btn-secondary">Redeem</button>
-           </div>
-         </form>
-       </div>
-       <div class="col-md-7 col-lg-8">
-         <h4 class="mb-3">Billing address</h4>
-         <form class="needs-validation" novalidate>
-           <div class="row g-3">
-             <div class="col-sm-6">
-               <label for="firstName" class="form-label">First name</label>
-               <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-               <div class="invalid-feedback">
-                 Valid first name is required.
-               </div>
-             </div>
-
-             <div class="col-sm-6">
-               <label for="lastName" class="form-label">Last name</label>
-               <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-               <div class="invalid-feedback">
-                 Valid last name is required.
-               </div>
-             </div>
-
-             <div class="col-12">
-               <label for="username" class="form-label">Username</label>
-               <div class="input-group has-validation">
-                 <span class="input-group-text">@</span>
-                 <input type="text" class="form-control" id="username" placeholder="Username" required>
-               <div class="invalid-feedback">
-                   Your username is required.
-                 </div>
-               </div>
-             </div>
-
-             <div class="col-12">
-               <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-               <input type="email" class="form-control" id="email" placeholder="you@example.com">
-               <div class="invalid-feedback">
-                 Please enter a valid email address for shipping updates.
-               </div>
-             </div>
-
-             <div class="col-12">
-               <label for="address" class="form-label">Address</label>
-               <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
-               <div class="invalid-feedback">
-                 Please enter your shipping address.
-               </div>
-             </div>
-
-             <div class="col-12">
-               <label for="address2" class="form-label">Address 2 <span class="text-muted">(Optional)</span></label>
-               <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-             </div>
-
-             <div class="col-md-5">
-               <label for="country" class="form-label">Country</label>
-               <select class="form-select" id="country" required>
-                 <option value="">Choose...</option>
-                 <option>United States</option>
-               </select>
-               <div class="invalid-feedback">
-                 Please select a valid country.
-               </div>
-             </div>
-
-             <div class="col-md-4">
-               <label for="state" class="form-label">State</label>
-               <select class="form-select" id="state" required>
-                 <option value="">Choose...</option>
-                 <option>California</option>
-               </select>
-               <div class="invalid-feedback">
-                 Please provide a valid state.
-               </div>
-             </div>
-
-             <div class="col-md-3">
-               <label for="zip" class="form-label">Zip</label>
-               <input type="text" class="form-control" id="zip" placeholder="" required>
-               <div class="invalid-feedback">
-                 Zip code required.
-               </div>
-             </div>
-           </div>
-
-           <hr class="my-4">
-
-           <div class="form-check">
-             <input type="checkbox" class="form-check-input" id="same-address">
-             <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
-           </div>
-
-           <div class="form-check">
-             <input type="checkbox" class="form-check-input" id="save-info">
-             <label class="form-check-label" for="save-info">Save this information for next time</label>
-           </div>
-
-           <hr class="my-4">
-
-           <h4 class="mb-3">Payment</h4>
-
-           <div class="my-3">
-             <div class="form-check">
-               <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
-               <label class="form-check-label" for="credit">Credit card</label>
-             </div>
-             <div class="form-check">
-               <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
-               <label class="form-check-label" for="debit">Debit card</label>
-             </div>
-             <div class="form-check">
-               <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-               <label class="form-check-label" for="paypal">PayPal</label>
-             </div>
-           </div>
-
-           <div class="row gy-3">
-             <div class="col-md-6">
-               <label for="cc-name" class="form-label">Name on card</label>
-               <input type="text" class="form-control" id="cc-name" placeholder="" required>
-               <small class="text-muted">Full name as displayed on card</small>
-               <div class="invalid-feedback">
-                 Name on card is required
-               </div>
-             </div>
-
-             <div class="col-md-6">
-               <label for="cc-number" class="form-label">Credit card number</label>
-               <input type="text" class="form-control" id="cc-number" placeholder="" required>
-               <div class="invalid-feedback">
-                 Credit card number is required
-               </div>
-             </div>
-
-             <div class="col-md-3">
-               <label for="cc-expiration" class="form-label">Expiration</label>
-               <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-               <div class="invalid-feedback">
-                 Expiration date required
-               </div>
-             </div>
-
-             <div class="col-md-3">
-               <label for="cc-cvv" class="form-label">CVV</label>
-               <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-               <div class="invalid-feedback">
-                 Security code required
-               </div>
-             </div>
-           </div>
-
-           <hr class="my-4">
-
-           <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
-         </form>
-       </div>
-     </div>
-   </main>
-
-   <footer class="my-5 pt-5 text-muted text-center text-small">
-     <p class="mb-1">&copy; 2017–2021 Company Name</p>
-     <ul class="list-inline">
-       <li class="list-inline-item"><a href="#">Privacy</a></li>
-       <li class="list-inline-item"><a href="#">Terms</a></li>
-       <li class="list-inline-item"><a href="#">Support</a></li>
-     </ul>
-   </footer>
- </div>
-
-
-<div class="container">
-  <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-    </ul>
-    <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
-</footer>
-</div>
-
-
-
-
-
-
-
-
-
-
-    <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-
-  </body>
-</html>
-
-
-
-	<script src="/js/jquery-3.3.1.slim.min.js"></script>
-	<script src="/js/popper.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-
-</body>
-</html>
+{% endblock %}
