--- a/App/templates/home.html
+++ b/App/templates/home.html
@@ -1,4 +1,4 @@
-							<!doctype html>
+<!doctype html>
 <html lang="pl"/>
 <head>
 
@@ -14,18 +14,14 @@
 	<link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 
 	<script>
-	MathJax = {
-	tex: {
-	inlineMath: [['$', '$'], ['\\(', '\\)']]
-	}
-	};
 	</script>
+
+	<script src="/js/custom.js"></script>
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 </head>
 <body>
 
-	<div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 		<header class="p-3 mb-3 border-bottom">
 			<div class="container">
 				<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -51,7 +47,6 @@
 				</div>
 			</div>
 		</header>
-	</div>
 
 <div class="container-fluid">
 {% block body %}{% endblock %}
@@ -73,8 +68,21 @@
 
 
 	<script src="/js/jquery-3.3.1.slim.min.js"></script>
-	<script src="/js/popper.min.js"></script>
+	<script src="/js/custom.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<script>
+		var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+		var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+		  return new bootstrap.Popover(popoverTriggerEl)
+		})
+	</script>
+	<script>
+		var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+		var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+		  return new bootstrap.Tooltip(tooltipTriggerEl)
+		})
+	</script>
 
 </body>
 </html>
